--- a/app/src/main/res/layout/message_item_right.xml
+++ b/app/src/main/res/layout/message_item_right.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:text="viđeno"
+            android:visibility="gone"
             android:layout_below="@id/show_text_message"></TextView>
 
     </RelativeLayout>
